# scorpio

./: .gitignore  README.md  map.pgm  map.yaml  onekey.sh
src/scorpio/scorpio_bringup/: CMakeLists.txt  package.xml
src/scorpio/scorpio_bringup/launch/: base_bringup.launch  driver_bringup.launch  driver_bringup_limited_rviz.launch  driver_bringup_nl.launch  driver_bringup_rviz.launch
src/scorpio/scorpio_bringup/launch/includes/: car_rf2o.launch.xml
src/scorpio/scorpio_bringup/param/: scorpio_ekf_params.yaml
src/scorpio/scorpio_description/: CMakeLists.txt  package.xml
src/scorpio/scorpio_description/launch/: scorpio_description_red.launch  scorpio_description_silver.launch
src/scorpio/scorpio_description/meshes/scorpio/base/: left_wheel.stl  right_wheel.stl
src/scorpio/scorpio_description/robots/: scorpio_red.urdf.xacro  scorpio_silver.urdf.xacro
src/scorpio/scorpio_description/urdf/: _d435.urdf.xacro  scorpio_red.urdf.xacro  scorpio_silver.urdf.xacro
src/scorpio/scorpio_description/urdf/base/: car_base.urdf  car_base_red.urdf  car_base_silver.urdf
src/scorpio/scorpio_description/urdf/sensors/: _d435.urdf.xacro  astra_camera.urdf  lidar.urdf
src/scorpio/scorpio_teleop/: CMakeLists.txt  package.xml
src/scorpio/scorpio_teleop/launch/: app_op.launch  app_op_hall.launch  app_op_remote.launch  teleop.launch  teleop_only.launch
src/scorpio/scorpio_teleop/rviz/: teleop_red.rviz  teleop_silver.rviz
src/scorpio/scorpio_teleop/scripts/: keyboard_control.sh
src/scorpio/scorpio_teleop/src/: teleop_node.cpp
src/scorpio/scorpio_test/: CMakeLists.txt  package.xml
src/scorpio/scorpio_test/launch/: all_run_test.launch  all_run_test_st.launch
src/scorpio/scorpio_test/src/: scorpio_test_motion.cpp  scorpio_turn_left_right.cpp  scorpio_turn_left_right_st.cpp
src/scorpio_app/follower_velocity_smoother/: CMakeLists.txt
src/scorpio_app/follower_velocity_smoother/src/: velocity_smoother_node.cpp
src/scorpio_app/scorpio_follower/: CMakeLists.txt  package.xml
src/scorpio_app/scorpio_follower/launch/: bringup.launch  nxfollower_bringup.launch  nxfollower_bringup_nodelet.launch
src/scorpio_app/scorpio_follower/launch/include/: velocity_smoother.launch.xml  velocity_smoother_normal.launch.xml
src/scorpio_app/scorpio_follower/rviz/: follow.rviz  follow_red.rviz  follow_silver.rviz
src/scorpio_app/scorpio_follower/src/: nxfollower.hpp  nxfollower_c.cpp  nxfollower_nodelet.cpp
src/scorpio_app/scorpio_navigation/: CMakeLists.txt  package.xml
src/scorpio_app/scorpio_navigation/launch/: scorpio_navigation.launch  scorpio_navigation_camera.launch
src/scorpio_app/scorpio_navigation/launch/includes/: move_base.launch.xml  velocity_smoother.launch.xml
src/scorpio_app/scorpio_navigation/launch/param/: costmap_common_params.yaml  teb_local_planner_params.yaml
src/scorpio_app/scorpio_navigation/rviz_cfg/: scorpio_navigation.rviz
src/scorpio_app/scorpio_rtabmap/: CMakeLists.txt  package.xml
src/scorpio_app/scorpio_rtabmap/launch/: astra_camera.launch  camera_rtabmap.launch  rtab_demo.launch  scorpio_mapping.launch  scorpio_mapping_d435.launch  scorpio_rtabmap_nav.launch  scorpio_rtabmap_teleop.launch
src/scorpio_app/scorpio_rtabmap/rviz/: scorpio_rtab_map_red.rviz  scorpio_rtab_map_silver.rviz
src/scorpio_app/scorpio_rtabmap/scripts/: cmd_save_map.sh
src/scorpio_app/scorpio_slam/: CMakeLists.txt  package.xml
src/scorpio_app/scorpio_slam/launch/: 2d_slam.launch  2d_slam_norviz.launch  2d_slam_teleop.launch  amcl.launch  depth_slam.launch  depth_slam_norviz.launch  depth_slam_teleop.launch  scorpio_cartographer.launch  scorpio_frontier_exploration.launch  scorpio_gmapping.launch  scorpio_hector.launch  scorpio_karto.launch
src/scorpio_app/scorpio_slam/rviz/: scorpio_gmapping.rviz  scorpio_gmapping_silver.rviz
src/scorpio_app/scorpio_slam/scripts/: action_save.sh
src/scorpio_app/spark_rtabmap/launch/: rtab_demo.launch  spark_rtabmap_teleop.launch
src/scorpio_driver/base/scorpio_base/: CMakeLists.txt  package.xml
src/scorpio_driver/base/scorpio_base/launch/: scorpio_base.launch
src/scorpio_driver/base/scorpio_base/msg/: CarPwm.msg
src/scorpio_driver/base/scorpio_base/src/: cmd_vel_to_ackermann_cmd.cpp  kfilter.hpp  scorpio_base.cpp
src/scorpio_driver/camera/realsense-ros/realsense2_camera/launch/: rs_rtabmap.launch
src/scorpio_driver/camera/realsense/realsense2_camera/launch/: rs_rgbd.launch
src/scorpio_driver/camera/realsense/realsense2_description/launch/: view_d435_model.launch
src/scorpio_driver/camera/realsense/realsense2_description/urdf/: _d435.urdf
src/scorpio_driver/lidar/iiiroboticslidar2/src/: node.cpp
src/scorpio_driver/lidar/ydlidar_g2/launch/: display.launch  lidar.launch
src/scorpio_driver/lidar/ydlidar_g2/urdf/: ydlidar.urdf
src/scorpio_driver/lidar/ydlidar_g4/: CMakeLists.txt  package.xml
src/scorpio_driver/lidar/ydlidar_g4/launch/: display.launch  gazebo.launch  lidar.launch  lidar_view.launch
src/scorpio_driver/lidar/ydlidar_g4/urdf/: ydlidar.urdf
